Adding module to gradle jvmArgs to fix build issue
Signed-off-by: Sagar Upadhyaya <sagar.upadhyaya.121@gmail.com>