@@ -270,7 +270,7 @@ javadoc {
     JavaVersion targetVersion = JavaVersion.toVersion(targetCompatibility);
     if (targetVersion.isJava9Compatible()) {
         options.addStringOption("-add-exports", "jdk.attach/sun.tools.attach=ALL-UNNAMED")
-        options.addStringOption("--add-exports", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED")
+        options.addStringOption("-add-exports", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED")
     }
 }
 
